--- a/tweet/templates/tweet_list.html
+++ b/tweet/templates/tweet_list.html
@@ -27,8 +27,10 @@ Home
                 <p class="card-text text-dark">{{ tweet.text }}</p>
             </div>
             <div class="card-footer bg-transparent border-0 d-flex justify-content-between">
+                 {% if tweet.user == user %}
                 <a href="{% url 'tweet_edit' tweet.id %}" class="btn btn-outline-primary btn-sm px-3">Edit</a>
                 <a href="{% url 'tweet_delete' tweet.id %}" class="btn btn-outline-danger btn-sm px-3">Delete</a>
+                {% endif %}
             </div>
         </div>
         {% empty %}
